added header html, css for mobile, desktop 🖥

--- a/index.html
+++ b/index.html
@@ -19,20 +19,20 @@
           <img src="./assest/image/logo.png" alt="logo" width="364" height="58" />
         </a>
 
-        <div class="search-view" data-search-view>
+        <div class="search-view " data-search-view>
           <div class="search-wrapper">
             <input
               type="search"
-              placeholder="search city..."
+              placeholder="Search city..."
               autocomplete="off"
-              class="search-field"
+              class="search-field "
               data-search-field
             />
 
             <span class="m-icon">search</span>
 
             <button
-              class="icon-btn leading-icon nas-state"
+              class="icon-btn leading-icon has-state"
               aria-label="close search"
               data-search-toggler
             >
@@ -51,19 +51,22 @@
                   <p class="label-2 item-subtitle">State of London, GB</p>
                 </div>
 
-                <a href="#" class="item-link has-state" data-search-toggler=""></a>
+                <a href="#" class="item-link has-state" data-search-toggler></a>
               </li>
             </ul>
           </div>
+        </div>
 
           <div class="header-action">
             <button class="icon-btn has-state" aria-label="open-search" data-search-toggler="">
               <span class="m-icon">search</span>
             </button>
 
-            <a href="#/current-locftion" class="btn-primary nas-state" data-current-location-btn></a>
+            <a href="#/current-locftion" class="btn-primary has-state" data-current-location-btn >
+              <span class="m-icon">my_location</span>
+              <span class="span">Current location</span>
+            </a>
           </div>
-        </div>
       </div>
     </header>
     <script type="module" src="./assest/js/main.js"></script>
