--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <span class="m-icon">search</span>
 
             <button
-              class="icon-btn leading-icon has-state"
+              class="icon-btn loading-icon has-state"
               aria-label="close search"
               data-search-toggler
             >
@@ -71,7 +71,7 @@
     </header>
 
     <main>
-      <article class="container">
+      <article class="article-container">
         <div class="content-left">
           <!-- current weather -->
           <section class="section current-weather" aria-label="current-weather" data-current-weather>
@@ -88,11 +88,11 @@
                   <p class="title-3 meta-text">Thursday 16, Feb</p>
                 </li>
                 </ul>
-              <div class="wrapper">
+              <div class="current-wc-wrapper">
                 <p class="heading">25&deg;C</p>
 
                 <img src="./assest/image/weather_icons/01d.png" alt="overcast clouds" class="weather-icon"
-                width="64">
+                width="64" height="64">
               </div>
               <p class="body-3">Overcast Clouds</p>
 
