--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <img class="logo-img" src="./assest/image/logo.png" alt="logo" width="364" height="58" />
         </a>
 
-        <div class="search-view " data-search-view>
+        <div class="search-view" data-search-view>
           <div class="search-wrapper">
             <input
               type="search"
@@ -40,12 +40,12 @@
             </button>
           </div>
 
-          <div class="search-result active">
+          <div class="search-result">
             <ul class="view-list" data-search-list>
               <li class="view-item">
                 <span class="m-icon">location_on</span>
 
-                <div class="">
+                <div >
                   <p class="item-title">London</p>
 
                   <p class="label-2 item-subtitle">State of London, GB</p>
@@ -270,7 +270,7 @@
                       <div>
                         <p class="label-1">Sunrise</p>
 
-                        <p class="title-1">6:30 AM</p>
+                        <p class="title-1">6:30 <sub>AM</sub></p>
                       </div>
                     </div>
 
@@ -280,7 +280,7 @@
                       <div>
                         <p class="label-1">Sunset</p>
 
-                        <p class="title-1">5:54 PM</p>
+                        <p class="title-1">5:54  <sub>PM</sub></p>
                       </div>
                     </div>
                   </div>
