begining current weather js

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </header>
 
     <main>
-      <article class="container">
+      <article class="container" data-container>
         <div class="content-left">
           <!-- current weather -->
           <section
@@ -1194,10 +1194,9 @@
       </a>
     </section>
 
-    <script type="module" src="./assest/js/api.js"></script>
     <script type="module" src="./assest/js/route.js"></script>
     <script type="module" src="./assest/js/app.js"></script>
-    <script type="module" src="./assest/js/module.js"></script>
+   
       
   </body>
   // 'https://api.openweathermap.org/data/3.0/onecall?lat=51.5072&lon=0.1276&units=metric&exclude=minutely,alerts&appid=c36508d37286c777e3389fe115f253ab'
